[project]
name = "trajectory-training"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pygame (>=2.6.1,<3.0.0)",
    "matplotlib (>=3.10.1,<4.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "boto3 (>=1.37.23,<2.0.0)",
    "stable-baselines3 (>=2.6.0,<3.0.0)",
    "gym (>=0.26.2,<0.27.0)",
    "scipy (>=1.15.2,<2.0.0)",
    "onnx (>=1.17.0,<2.0.0)",
    "onnxruntime (>=1.21.0,<2.0.0)",
    "openai (>=1.69.0,<2.0.0)",
    "sentence-transformers (>=4.0.2,<5.0.0)",
    "tiktoken (>=0.9.0,<0.10.0)",
    "dotenv (>=0.9.9,<0.10.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
